# chain-wallet-libs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci_android.yaml  ci_android_release.yaml  ci_checks.yaml  ci_integration.yaml  ci_jni_build.yaml  release.yaml
bindings/wallet-c/: Cargo.toml  wallet.h
bindings/wallet-c/src/: lib.rs
bindings/wallet-cordova/: BUILD.md  README.md  build_ios.py  package.json  plugin.xml
bindings/wallet-cordova/scripts/: build_ios.py  build_jni.py  test.py
bindings/wallet-cordova/src/android/: WalletPlugin.java  WalletPlugin.kt
bindings/wallet-cordova/src/ios/: .gitignore  WalletPlugin.h  WalletPlugin.m  WalletPlugin.swift  swift-format-config.json
bindings/wallet-cordova/tests/: .gitignore  plugin.xml
bindings/wallet-cordova/tests/src/: main.js  utils.js
bindings/wallet-cordova/www/: wallet.js
bindings/wallet-core/: Cargo.toml
bindings/wallet-core/src/: c.rs  error.rs  lib.rs  wallet.rs
bindings/wallet-core/src/c/: bip39.rs  commons.rs  fragment.rs  mod.rs  pending_transactions.rs  symmetric_cipher.rs  wallet.rs
bindings/wallet-jni/: Cargo.toml  build.rs
bindings/wallet-jni/java/: WalletTest.java
bindings/wallet-jni/java/com/iohk/jormungandrwallet/: ErrorCode.java  SymmetricCipher.java
bindings/wallet-jni/src/: java_glue.rs.in  lib.rs
bindings/wallet-js/: Cargo.toml
bindings/wallet-js/src/: lib.rs  utils.rs
bindings/wallet-js/tests/: web.rs
bindings/wallet-py/: Cargo.toml  pyproject.toml
bindings/wallet-py/src/: lib.rs
bindings/wallet-swift/: BUILDING.md  Package.swift  README.md  build-framework.sh  swift-format-config.json
bindings/wallet-swift/Config/: Release.xcconfig
bindings/wallet-swift/Sources/JormungandrWallet/: CWrappers.swift  Conversion.swift  JormungandrWallet.swift  Proposal.swift  Settings.swift  Wallet.swift  WalletC.swift
bindings/wallet-swift/Sources/JormungandrWalletC/: module.modulemap  shim.h
bindings/wallet-swift/Sources/JormungandrWalletFFI/: JormungandrWalletFFI.h  module.modulemap
bindings/wallet-uniffi/: Cargo.toml  gen_bindings.sh  uniffi.toml
bindings/wallet-uniffi/codegen/kotlin/com/iohk/jormungandr_wallet/: jormungandr_wallet.kt
bindings/wallet-uniffi/codegen/kotlin/uniffi/jormungandr_wallet/: jormungandr_wallet.kt
bindings/wallet-uniffi/codegen/python/: jormungandr_wallet.py
bindings/wallet-uniffi/codegen/swift/: jormungandr_wallet.swift  jormungandr_walletFFI.h  jormungandr_walletFFI.modulemap
bindings/wallet-uniffi/src/: lib.rs  lib.udl
bip39/: Cargo.toml
bip39/src/: mnemonic.rs
chain-path-derivation/src/: bip44.rs
doc/: CRYPTO.md
hdkeygen/: Cargo.toml
hdkeygen/src/: account.rs  key.rs
hdkeygen/src/bip44/: account.rs  mod.rs  sskey.rs
symmetric-cipher/: Cargo.toml
test-vectors/: block0  block0.json  genesis.yaml
test-vectors/free_keys/: keys.json
test-vectors/vote/: input.yaml  vote_plan.cert
wallet/: Cargo.toml
wallet-android/app/src/main/cpp/vendors/: download.sh
wallet-android/libs/: raname_targets.py
wallet-android/src/androidTest/java/com/iohk/jormungandrwallet/: ExampleInstrumentedTest.kt
wallet-android/src/main/java/com/iohk/jormungandrwallet/: Settings.kt  Wallet.kt
wallet-c/: Cargo.toml
wallet-jni/: Cargo.toml
wallet-jni/src/: lib.rs
wallet/src/: account.rs  blockchain.rs  lib.rs
wallet/src/recovering/: icarus.rs  mod.rs
wallet/src/scheme/: freeutxo.rs  mod.rs
wallet/src/transaction/: builder.rs  dump.rs  witness_builder.rs
wallet/tests/: account.rs  free_keys.rs
wallet/tests/utils/: mod.rs
