[package]
name = "wallet-uniffi"
version = "0.1.0"
edition = "2021"

crate-type = ["cdylib"]

[dependencies]
uniffi = "0.14"
uniffi_macros = "0.14"
wallet-core = { path = "../wallet-core" }
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-addr = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-crypto = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-time = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
thiserror = {version = "1.0", default-features = false}

[build-dependencies]
uniffi_build = "0.14"
